# netcdf-challenge

./: .gitmodules  LICENSE  README.md
cpp/: Dockerfile  README.md  docker-compose.yml
cpp/src/: CMakeLists.txt  main.cpp  read_netcdf.hpp  rest_server.hpp
python/: README.md  pyproject.toml
python/netcdf_challenge/: __init__.py
